--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,11 @@
-.App {
-  text-align: center;
+.codeBox {
+  margin: auto;
+  margin-top: 5em;
+  width: 70%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.collapsed {
+  box-sizing: border-box;
+  overflow: hidden;
+  height: 25.5em;
 }
